@@ -1,3 +1,7 @@
+2003-08-29  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
+	* dev/advandev/cdpack.xml: Update bootable CD section.
+
 2003-08-09  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
 	* tutorials.xml: New entity bootoptions.
